demo-18/securitygroup.tf
resource "aws_security_group" "allow-ssh-prod" {
  vpc_id      = "${module.vpc-prod.vpc_id}"
  name        = "allow-ssh"
  description = "security group that allows ssh and all egress traffic"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["185.100.71.242/32"]
  }

  tags = {
    Name = "allow-ssh-prod"
  }
}

resource "aws_security_group" "allow-ssh-dev" {
  vpc_id      = "${module.vpc-dev.vpc_id}"
  name        = "allow-ssh"
  description = "security group that allows ssh and all egress traffic"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["185.100.71.242/32"]
  }

  tags = {
    Name = "allow-ssh-dev"
  }
}
